fullSandbox11072023/force-app/main/default/objects/Lead_Settings__c/Lead_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Leading Routing - These settings are used to change the record type and for routing leads to the appropriate queue.</description>
    <label>Lead Settings</label>
</CustomObject>