fullSandbox11072023/force-app/main/default/objects/Lead_Settings__c/fields/Disable_Autorouting__c.field-meta.xml
<CustomField>
    <fullName>Disable_Autorouting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This disables routing for a particular SBU (like Mayo).</description>
    <label>Disable Autorouting</label>
    <type>Checkbox</type>
</CustomField>