fullSandbox11072023/force-app/main/default/objects/Lead_Settings__c/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <label>Lead Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>