fullSandbox11072023/force-app/main/default/objects/Lead_Settings__c/fields/Lead_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_ID__c</fullName>
    <label>Lead Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>