fullSandbox11072023/force-app/main/default/objects/Lead_Settings__c/fields/LeadQuequeId__c.field-meta.xml
<CustomField>
    <fullName>LeadQuequeId__c</fullName>
    <label>LeadQuequeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>