fullSandbox11072023/force-app/main/default/objects/Lead_Settings__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>LeadSource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>