fullSandbox11072023/force-app/main/default/objects/Lead_Settings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Owner__c</columns>
    <columns>Lead_Owner_ID__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Record_Type_ID__c</columns>
    <columns>Disable_Autorouting__c</columns>
    <columns>LeadSource__c</columns>
    <columns>LeadQuequeId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>