fullSandbox11072023/force-app/main/default/objects/Lead_Settings__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>