fullSandbox11072023/force-app/main/default/objects/Lead_Settings__c/listViews/LeadRouting.listView-meta.xml
<ListView>
    <fullName>LeadRouting</fullName>
    <columns>NAME</columns>
    <columns>LeadSource__c</columns>
    <columns>LeadQuequeId__c</columns>
    <filterScope>Everything</filterScope>
    <label>LeadRouting</label>
    <language>en_US</language>
</ListView>